kairos-0.4.0
============

Stat queries can be comma-separated values to join multiple timeseries.

Added "collapse" parameter to "/series" which supports collapsing all of the
data in the date range into a single result. This supports easy computation of
aggregates across a time range, such as "maximum value in the last 7 days".

Schemas can include TRANSFORMS stanza for defining a named map of data 
transforms that will be used when querying torus.

Adding hiredis requirement as redis is not performant enough without it.

0.3.3
=====

Result of "/series" now includes the full stat name and its function in the
'stat' field. Added 'stat_name' field in results.

0.3.2
=====

Fixed handling of "start" and "end" parameters to "/series"

0.3.1
=====

Fixed handling of "condensed" and "interval" parameters to "/series"

0.3.0
=====

Upgrade to kairos 0.3.0, adds support for Gregorian dates and date ranges
to "/series"

Adds support for UNIX timestamps or parsedatetime-compatible strings for
'start' and 'end' parameters to "/series"

Adds support for 'steps' parameter to "/series"

0.2.1
=====

Fix bug in detecting recursion when processing aggregates

0.2.0
=====

Added support for Mongo backends via latest kairos

Require the database type in the URI

Redis and Mongo support full suite of URI options

Added "schema_debug" binary to package

0.1.4
=====

Aggregates can now cascade to other aggregates, with a simple failsafe on 
infinite loops

0.1.3
=====

Update to kairos 0.1.5 with a bug fix for reading data from timeseries with
relative time interval schemas.

0.1.2
=====

Added support for transforms in a schema, to replace or suppress key/value
pairs.

0.1.1
=====

Upgrade to kairos 0.1.4 with bug fixes and performance improvements, relative 
date support and gauge type

Fixed redis host parsing when no port defined

Change command line parameter "--config" to "--schema"


0.1.0
=====

Initial release of torus and karbon